# go_learning_server

./: .gitignore  dbInteractions.go  envconvig  go.mod  go.sum  handlers.go  main.go  sampleSecret  types.go
cliArgs/: cliArgs.go
dataCollection/: dataCollection.go  dataCollection_test.go
dataCollection/rust_core/: .gitignore  Cargo.toml  dev.db  sqlite3
dataCollection/rust_core/src/: args.rs  data_collection.rs  db_setup.rs  event_handling.rs  main.rs  utils.rs
dbInteractions/: dbInteractions.go  dbTypes.go  index.go  init.go  measurementsReadOperations.go  measurementsWriteOperations.go  readOperations.go  types.go  userPwdAuth.go  usersReadOperations.go  usersWriteOperations.go  writeOperations.go
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  global.d.ts
frontend/src/Components/GeneralComponents/: DateRangePicker.tsx  SingleDateSelector.tsx
frontend/src/Components/SpecificComponents/: AllTopicsGraph.tsx  AllTopicsTable.tsx  DataFetchDateSelection.tsx
frontend/src/Contexts/: AllTopicsContext.tsx
frontend/src/Hooks/: useDataFetch.tsx
frontend/src/utils/: constants.ts  funcs.ts
handlers/: handlers.go  measurementsHandlers.go  usersHandlers.go
middleware/: checkAuth.go  rateLimit.go  reqlogger.go
types/: types.go
utils/: pwdAuth.go  sendMail.go  validateRegisterInfo.go  validateRegisterInfo_test.go
