[package]
name = "rust_core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
color-eyre = "0.6.4"
mosquitto-rs = "0.11.2"
redis = "0.31.0"
rusqlite = "0.35.0"
tokio = { version = "1.45.0", features = ["macros", "net", "rt-multi-thread", "sync", "time", "tokio-macros"] }
